--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <body>
     <div>
       <h1> Hello World <</h1>
-      <h2> Level 2 <</h2>
+      <h2> Level 2 </h2>
+        <p> This is a <span class = "blue"> blue span </span> </p>
 
         
     <p> Hellow World </p>
